Fixed spacing on tracking page

--- a/styles.css
+++ b/styles.css
@@ -252,6 +252,8 @@ input::-webkit-inner-spin-button {
 }
 
 .input-container {
+  margin: 0 auto;
+  width: 600px;
   display: flex;
   justify-content: space-between;
 }
@@ -387,6 +389,10 @@ footer img {
 @media screen and (max-width: 768px) {
   h1 {
     font-size: 42px;
+  }
+
+  .input-container {
+    width: auto;
   }
 
   .btn-primary {
